# pyideogram

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/pyideogram/: __init__.py  dataloader.py  ideogram.py  matplotlib_extension.py  misc.py  tracks.py
src/pyideogram/annotation/: MANE38_chr1.pickle.xz  MANE38_chr10.pickle.xz  MANE38_chr11.pickle.xz  MANE38_chr12.pickle.xz  MANE38_chr13.pickle.xz  MANE38_chr14.pickle.xz  MANE38_chr15.pickle.xz  MANE38_chr16.pickle.xz  MANE38_chr17.pickle.xz  MANE38_chr18.pickle.xz  MANE38_chr19.pickle.xz  MANE38_chr2.pickle.xz  MANE38_chr20.pickle.xz  MANE38_chr21.pickle.xz  MANE38_chr22.pickle.xz  MANE38_chr3.pickle.xz  MANE38_chr4.pickle.xz  MANE38_chr5.pickle.xz  MANE38_chr6.pickle.xz  MANE38_chr7.pickle.xz  MANE38_chr8.pickle.xz  MANE38_chr9.pickle.xz  MANE38_chrX.pickle.xz  MANE38_chrY.pickle.xz  cytoBands.pickle.xz
tests/: test_cytoband.py  test_gff_loading.py  test_ideogram.py
tests/data/: cytoBand.tsv  test.gff
