[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyideogram"
version = "0.1.0"
dependencies = [
  "matplotlib",
  "numpy",
]
authors = [
  { name="Balthasar Schlotmann" },
]
description = "plot ideograms in matplotlib"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [

    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]

[project.urls]
"Homepage" = "https://github.com/Balthasar-eu/pyideogram"
"Bug Tracker" = "https://github.com/Balthasar-eu/pyideogram/issues"

[project.optional-dependencies]
test = [
    "pytest"
]
